--- a/eShop.Admin/Views/Product/ListProducts.cshtml
+++ b/eShop.Admin/Views/Product/ListProducts.cshtml
@@ -1,14 +1,14 @@
-﻿
+﻿@model IEnumerable<ProductsModel>
 
 @{
     ViewBag.Title = "List of Products";
 }
 
 <div class="container">
-    <h2>Categories</h2>
+    <h2>Products</h2>
     <br />
-    <a onclick="showInPopup('@Url.Action("AddOrEdit","Category")','New Product')" class="btn btn-primary">Add Category</a>
-    @if (true)
+    <a onclick="showInPopup('@Url.Action("AddOrEdit","Product")','New Product')" class="btn btn-primary">Add Category</a>
+    @if (Model.Any())
     {
         <table class="table table-hover">
             <thead>
@@ -24,33 +24,42 @@
                     <th class="col-sm-1">Delete</th>
                 </tr>
             </thead>
-            @*@foreach (var category in Model)
+            @foreach (var product in Model)
             {
+                var photoPath = "~/images/" + (product.PhotoPath ?? "noimage.jpg");
                 <tbody>
                     <tr style="border-color:black">
-                        <td>@category.Name</td>
+
+                        <td><img class="card-img-top img-fluid text-center" src="@photoPath" asp-append-version="true" style="max-width: auto" /></td>
+                        <td>@product.Name</td>
+                        <td>@product.Category</td>
+                        <td>@product.Description</td>
+                        <td>@product.Price</td>
+                        <td>@product.Unit</td>
+                        <td class="ps-4">@product.Quantity</td>
+
                         <td>
-                            <a onclick="showInPopup('@Url.Action("AddOrEdit","Category", new {id = category.Id})','Edit Product')" class="btn btn-primary" style="background-color:forestgreen"><i class="bi bi-pencil-square" style="color:whitesmoke; font-size:20px"></i></a>
+                            <a onclick="showInPopup('@Url.Action("AddOrEdit","Product", new {id = product.Id})','Edit Product')" class="btn btn-primary" style="background-color:forestgreen"><i class="bi bi-pencil-square" style="color:whitesmoke; font-size:20px"></i></a>
                         </td>
                         <td>
-                            <form asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id" method="post">
-                                <span id="confirmDeleteSpan_@category.Id" style="display:none">
+                            <form asp-controller="Product" asp-action="Delete" asp-route-id="@product.Id" method="post">
+                                <span id="confirmDeleteSpan_@product.Id" style="display:none">
                                     <span>Are you sure you want to delete?</span>
                                     <button type="submit" class="btn btn-danger">Yes</button>
-                                    <a class="btn btn-primary" onclick="confirmDelete('@category.Id',false)">No</a>
+                                    <a class="btn btn-primary" onclick="confirmDelete('@product.Id',false)">No</a>
                                 </span>
 
-                                <span id="deleteSpan_@category.Id"><a onclick="confirmDelete('@category.Id',true)" class="btn btn-primary" style="background-color:red"><i class="bi bi-trash" style="color:whitesmoke; font-size:20px"></i></a></span>
+                                <span id="deleteSpan_@product.Id"><a onclick="confirmDelete('@product.Id',true)" class="btn btn-primary" style="background-color:red"><i class="bi bi-trash" style="color:whitesmoke; font-size:20px"></i></a></span>
                             </form>
                         </td>
                     </tr>
                 </tbody>
-            }*@
+            }
         </table>
     }
     else
     {
-        <h4>No category was added so far</h4>
+        <h4>No Product was added so far</h4>
     }
 </div>
 
