--- a/eShop.Admin/Views/Product/ListProducts.cshtml
+++ b/eShop.Admin/Views/Product/ListProducts.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <h2>Products</h2>
     <br />
-    <a onclick="showInPopup('@Url.Action("AddOrEdit","Product")','New Product')" class="btn btn-primary">Add Category</a>
+    <a onclick="showInPopup('@Url.Action("AddOrEdit","Product")','New Product')" class="btn btn-primary">Add Product</a>
     @if (Model.Any())
     {
         <table class="table table-hover">
