--- a/eShop.Admin/Views/Shared/_Layout.cshtml
+++ b/eShop.Admin/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 <body>
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
-        <a class="navbar-brand ps-3" href="index.html">სამართავი პანელი</a>
+        <a class="navbar-brand ps-3" asp-action="Index" asp-controller="Home">სამართავი პანელი</a>
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
@@ -48,7 +48,7 @@
                 <div class="sb-sidenav-menu">
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">შეკვეთები</div>
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" asp-action="ListOrders" asp-controller="Order">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             შეკვეთები
                         </a>
